discorved mobile bug

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="container">
   <div class="row">
     <!--Courses Column-->
-    <div class="col-lg-5 col-sm-4">
+    <div class="col-lg-5 col-md-5 col-sm-4">
 <h3 class="card-title">Noteable Courses Taken</h3>
 <a href="https://github.com/Mcdonoughd/CS3013" ><div class="well">Operating Systems (CS3013)</div></a>
 <a href="https://github.com/Mcdonoughd/CS3431" ><div class="well">Databases (CS3431)</div></a>
@@ -37,7 +37,7 @@
 
 
       <!--Experience Column-->
-    <div class="col-lg-5 col-sm-4">
+    <div class="col-lg-5 col-md-5 col-sm-4">
       <h3 class="card-title">Relative Experience </h3>
       <div class="table-responsive ">
         <table class="table">
@@ -130,7 +130,7 @@
 <div class="col-lg-2 col-sm-4  ">
   </div>
         <!--Other info links -->
-        <div class="col-lg-8 col-sm-4  ">
+        <div class="col-lg-8 col-md-8 col-sm-4  ">
 
           <ul class="list-inline" >
     <li><a href="https://play.pokemonshowdown.com/"><div class="well well-sm" >Pokemon Showdown</div></a></li>
