made edits to index

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Jessie</h1>
     <p>
-      [Self introduction]
+      Hi! I'm a computer science major in the class of 2019.
     </p>
     <p>
-      [Major and other information]
+      Previous computer science courses I've taken include Object-Oriented Design Concepts, Systems Programming Concepts, Operating Systems, Databases, Software Engineering, Human-Computer Interaction, and Software Security Engineering.
     </p>
     <p>
-      [Other things]
+      I've had some experience creating websites with HTML and CSS, and I'm pretty comfortable programming in Java, C, C# and Python. I'm also familiar with unit testing. However, I don't have too much experience with JavaScript or Ruby.
     </p>
 
     <h2>Experience</h2>
