edited work experience

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Software Developer at Allscripts</li>
+      <li>Student at WPI</li>
     </ul>
   </body>
 </html>
