--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<html lang="en">
+<img lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="index.css">
+
   </head>
-  <body>
-    <h1>Information about John O'Leary</h1>
+  <img>
+<h1>Information about John O'Leary</h1>
     <p>
       I am a senior at WPI, looking to pursue a career in computer engineering
     </p>
@@ -23,5 +25,7 @@
       <li>IBM/Rational</li>
       <li>WPI</li>
     </ul>
+  <img src="Me.jpg" class="center">
+
   </body>
 </html>
