Finalized everything but experience list

--- a/index.html
+++ b/index.html
@@ -1,40 +1,76 @@
 <html lang="en">
-  <head>
-    <title>CS4241 Assignment 1</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Information about Kamil Gumienny</h1>
-    <p>
-       Hey everyone, it's your favorite person named Kamil Gumienny!
-    </p>
-    <p>
-      I am a WPI junior studying Computer Science.
-    </p>
-    <p>
-      Okay first off I just want to say I am blown away that I've taken something on my computer and just uploaded it to my very own internet page that anyone can access. This is actually exciting.
 
-      I'm a junior CS major hoping to get into cyber security.
-      Other things about myself:
-      -I love any and everything outdoors as long as it's not a sport (I'm athletically challanged), most especially taking my puppy (INSERT PICTURE OF KUBUS HERE) on walks.
-      -I enjoy going to the gym. It's my happy place and I need to spend at least 1.5 hours in the gym a day to reset my mojo.
-      -I am a brother of Theta Chi and am currently serving as the interim Secretary. Being in a fraternity adds many obligations to my schedule but I find it worth it because all those obligations are fulfilled with people I enjoy being around.
-    </p>
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 
-    <h2>Experience</h2>
-    <p>
-      On campus I worked with the Athletic Department to help facilitate sporting events (the students in the bright green shirts catching foul soccer balls).
+  <title>CS4241 Assignment 1</title>
+  <meta charset="utf-8">
+</head>
 
-      I currently work on-call for a cybersecurity company in Newport Beach, CA. I enjoy this field of work and hope to enter the workforce as a Cybersecurity Analyst. My goal is to be in a Red Team or a Security Software Developer.
-    </p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Java</li>
-      <li>JavaScript</li>
-      <li>Ruby</li>
-      <li>Python</li>
-      <li>Unit Testing</li>
-    </ul>
-  </body>
+<body style="background-image: url(background.jpg); background-size: cover;">
+  <div style="background-color: rgba(25, 26, 28, 0.5)">
+    <h1>Kamil Gumienny</h1>
+    <hr>
+    <h2>About me</h2>
+    <p style="text-align: center;">I am a WPI junior studying Computer Science. If you want to learn more, scroll over the images below</p>
+    <br><br>
+    <div class="centre">
+      <div class="container">
+        <img src="kubus.jpg" alt="My doge" class="image">
+        <div class="overlay">
+          <div class="text">I love any and everything outdoors as long as it's not a sport (I'm athletically challanged), most especially taking my puppy, Kubus, on walks.</div>
+        </div>
+      </div>
+      <div class="container">
+        <img src="music.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+          <div class="text">One of my favorite hobbies when I'm feeling lazy is to find new music. I always listen to my Discover Weekly playlist on Spotify and in general I'm always on the hunt for some new tunes.</div>
+        </div>
+      </div>
+      <div class="container">
+        <img src="thetachi.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+          <div class="text">I am a brother of Theta Chi and am currently serving as the interim Secretary. Being in a fraternity adds many obligations to my schedule but I find it worth it because all those obligations are fulfilled with people I enjoy being around.</div>
+        </div>
+      </div>
+      <div class="container">
+        <img src="gym.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+          <div class="text">I enjoy going to the gym. It's my happy place and I need to spend at least 1.5 hours in the gym a day to reset my mojo.</div>
+        </div>
+      </div>
+    </div>
+    <br>
+    <br>
+      <h2>Experience</h2>
+      <div class="centre">
+        <div style="width: 50%;">
+          <div style="padding-left: 50px;">
+            <h3>Work Experience</h3>
+            <p>
+              On campus I worked with the Athletic Department to help facilitate sporting events (the students in the bright green shirts catching foul soccer balls). I currently work on-call for a cybersecurity company in Newport Beach, CA. I enjoy this field of work
+              and hope to enter the workforce as a Cybersecurity Analyst. My goal is to be in a Red Team or a Security Software Developer.
+            </p>
+          </div>
+        </div>
+
+        <div style="width: 50%;">
+          <div style="padding-right: 50px">
+            <h3>Programming Experience</h3>
+            <ul>
+              <li>HTML - </li>
+              <li>CSS - </li>
+              <li>Java - </li>
+              <li>JavaScript - </li>
+              <li>Ruby - </li>
+              <li>Python - </li>
+              <li>Unit Testing - </li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    <div>
+</body>
+
 </html>
