updated my information

--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
   <div id="center">
     <h1 style="margin-bottom:40px;">Information about Yufei Gao</h1>
     <p>
-      WPI class of 2020  <u style = "color:grey;">(plan to graduate in 2019)</u>
-    </p>
-    <p>
+      WPI class of 2020  <u style = "color:grey;">(plan to graduate in 2019)</u><br>
       Major: Computer Science<br>
       Minor: Data Science<br>
+    </p>
+    <p>
+      Hi! I am Yufei. I enjoy video games, TV shows, traveling, and crafts. This is my first website. Thanks for visiting!
     </p>
     <p>
       Favorite meme:<br>
