--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Custom Stylesheet -->
      <link rel="stylesheet" type="text/css" href="./styles.min.css">
           <!-- Latest compiled and minified CSS -->
