Add pizazz to home page

--- a/index.html
+++ b/index.html
@@ -2,39 +2,49 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+	<style>
+    body {}
+    h1   {text-align: center;}
+	h2   {text-align: center;}
+	h3   {text-align: center;}
+	h4   {text-align: center; color: blue;}
+    p    {text-align: center;}
+	div {text-align: center;}
+	ul {display: inline-block;}
+	li {text-align: left;}
+	.centerImages {display: block; margin-left: auto; margin-right: auto; width: 25%;}
+    </style>
   </head>
   <body>
     <h1>Information about Michael Taylor</h1>
     <p>
-      Hi i'm Michael Taylor. I'm a Senior here at WPI.
+      Hi i'm Michael Taylor. I'm a Computer Science major, minoring in Data Science. </br>My focus is in software and app/web development. I am graduating in May 2019.
     </p>
-    <p>
-      I'm a computer Science Major minoring in Data Science. My focus is in software development and app/web development
-    </p>
-    <p>
-      [Other things]
-    </p>
-
-    <h2>Experience</h2>
-    <p>
+	<h2>Experience</h2>
+	<div class="lists">
+    <h3>
       Working experience
-    </p>
-    <ul>
+    </h3>
+	<ul>
       <li>Digital Federal Credit Union</li>
       <li>Raytheon</li>
       <li>WPI</li>
     </ul>
-	<p>
+	<h3>
       Webware experience
-    </p>
+    </h3>
     <ul>
-      <li>HTML </li>
-      <li>CSS</li>
-      <li>Javascipt</li>
-	  <li>Java</li>
-	  <li>Python</li>
-	  <li>Unit Testing</li>
-	  <li>Vue.js</li>
+      <li>HTML (Some)</li>
+      <li>CSS (A Little)</li>
+      <li>Javascipt (Some)</li>
+	  <li>Java (A Lot)</li>
+	  <li>Python (Some)</li>
+	  <li>Unit Testing (Some)</li>
     </ul>
+	</div>
+	    <h4>
+	Thanks for visiting my Website!
+    </h4>
+    <img src="https://media.giphy.com/media/XreQmk7ETCak0/giphy.gif" class="centerImages" alt="Good Job Meme">
   </body>
 </html>
