--- a/index.html
+++ b/index.html
@@ -6,17 +6,42 @@
   </head>
   <body>
     <h1>Information about Maggie Goodwin</h1>
+	<h2>
+	  Self-Introduction
+	</h2>
     <p>
       Hi! I'm super excited for this class, as I've always been curious about Web
 	  Development. I've dabbled here and there, but I want something I can really
 	  sink my teeth into. I can't wait to see what everybody ends up making!
     </p>
-    <p>
+	<p>
 	  Class of 2020, Junior
     </p>
     <p>
       Major: Computer Science, Minor: English
     </p>
+	<h4>
+	A little bit about me:
+	</h4>
+	<p>
+	  I loooooove &#9829&#9829&#9829 to read and I used to do it
+	  aaallll the time back in middle school. I really took advantage of the fact 
+	  that my homeroom teacher would pick up the books in her mailbox I had put on 
+	  hold the previous night and place them on my desk. Nowadays I don't read as
+	  avidly as I did before, but the occasional book catches my eye. I highly
+	  recommend the book <i>Sharp Objects</i>, by Gillian Flynn (author of 
+	  <i>Gone Girl</i>). It was recently adapted into an equally good HBO series
+	  of the same name that I <i>also</i> highly recommend.
+	</p>
+	<p>
+	I also watch a lot of Youtube. They actually recently released a feature called
+	"Time Watched" that you should check out (unless you are dreading the results).
+	Mine was...not surprising. Same for my "time listened" for Spotify 2017...
+	</p>
+	
+	<p>Here is a some of my sisters in Alpha Gam and me. I'm the fourth from the left!
+	And yes, the bridge was very steep and I was terrified of falling down</p>
+	<img src="AGD_image.jpg" alt="Some of my sisters and I" width=600">
 
     <h2>Experience</h2>
     <h4>
@@ -29,10 +54,12 @@
       Technical experience
     </h4>
     <ul>
-      <li>Java/unit testing, through classes</li>
-	  <li>SQL, through internship</li>
-	  <li>HTML/CSS, through tutorials</li>
-	  <li>JavaScript, through tutorials</li>
+      <li>Java/unit testing, some</li>
+	  <li>C/C++, some</li>
+	  <li>SQL, a little</li>
+	  <li>HTML/CSS, a little</li>
+	  <li>JavaScript, a little</li>
+	  <li>Python, very little</li>
     </ul>
 	 <h4>
       Class History
@@ -40,12 +67,12 @@
     <ul>
       <li>CS1101: Intro to CS</li>
       <li>CS2102: Intro to OOP</li>
-	  <li>CS2303: Intro to Sys</li>
-	  <li>CS2011: Intro to Mach and Asm</li>
+	  <li>CS2303: Intro to Systems</li>
+	  <li>CS2011: Intro to Machine and Assembly</li>
 	  <li>CS2022: Discrete Math</li>
 	  <li>CS2223: Algorithms</li>
-	  <li>CS3013: Operating Sys</li>
-	  <li>CS3041: HCI</li>
+	  <li>CS3013: Operating Systems</li>
+	  <li>CS3041: Human-Computer Interaction (&#9829 Jorge &#9829)</li>
 	  <li>CS3733: Soft Eng</li>
     </ul>
   </body>
