trying different filepath name for image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	
 	<p>Here is a some of my sisters in Alpha Gam and me. I'm the fourth from the left!
 	And yes, the bridge was very steep and I was terrified of falling down</p>
-	<img src="AGD_image.jpg" alt="Some of my sisters and I" width=600">
+	<img src="public/img/AGD_image.jpg" alt="Some of my sisters and I" width=600">
 
     <h2>Experience</h2>
     <h4>
