--- a/index.html
+++ b/index.html
@@ -6,22 +6,32 @@
   <body>
     <h1>Information about James Kenney</h1>
     <p>
-      [Self introduction]
+        I am a Computer Science major, class of 2019
     </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
-
+    <h2>Previous CS courses</h2>
+    <ul>
+        <li>CS 1101</li>
+        <li>CS 2102</li>
+        <li>CS 2303</li>
+        <li>CS 2022</li>
+        <li>CS 2223</li>
+        <li>CS 2011</li>
+        <li>CS 3013</li>
+        <li>CS 3733</li>
+        <li>CS 4513</li>
+    </ul>
     <h2>Experience</h2>
     <p>
       Working experience
     </p>
     <ul>
-      <li>Sierra Olympic</li>
-      <li>Hood Technology</li>
+        <li>HTML - None</li>
+        <li>CSS - Some</li>
+        <li>Java - Lots</li>
+        <li>JavaScript - None</li>
+        <li>Ruby - None</li>
+        <li>Python - Some</li>
+        <li>Unit testing - Some</li>
     </ul>
   </body>
 </html>
