--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 </div>
 <!--Body container -->
-<div class="container">
+<div class="container show-content">
   <div class="row">
     <!--Courses Column-->
     <div class="col-lg-5 col-md-5 col-sm-4">
