Add coursework to table

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <!-- Style -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Fonts -->
-    <!--<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Roboto:300" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i|Source+Sans+Pro" rel="stylesheet">
     <meta charset="utf-8">
 </head>
@@ -18,31 +17,90 @@
 
 
     <h2>WPI Coursework</h2>
-    <ul>
-        <li>CS 1101 - Introduction to Program Design</li>
-        <li>CS 2102 - Object-Oriented Design Concepts</li>
-        <li>CS 2303 - Systems Programming Concepts</li>
-        <li>CS 2011 - Introduction to Machine Organization and Assembly Language</li>
-        <li>CS 2223 - Algorithms</li>
-        <li>CS 3013 - Operating Systems</li>
-        <li>CS 3133 - Foundations of Computer Science</li>
-        <li>CS 3431 - Database Systems I</li>
-        <li>CS 3516 - Computer Networks</li>
-        <li>CS 3733 - Software Engineering</li>
-        <li>CS 4401 - Software Security Engineering</li>
-        <li>CS 453X - Machine Learning</li>
-    </ul>
+
+    <!--<ul>-->
+        <!--<li>CS 1101 - Introduction to Program Design</li>-->
+        <!--<li>CS 2102 - Object-Oriented Design Concepts</li>-->
+        <!--<li>CS 2303 - Systems Programming Concepts</li>-->
+        <!--<li>CS 2011 - Introduction to Machine Organization and Assembly Language</li>-->
+        <!--<li>CS 2223 - Algorithms</li>-->
+        <!--<li>CS 3013 - Operating Systems</li>-->
+        <!--<li>CS 3133 - Foundations of Computer Science</li>-->
+        <!--<li>CS 3431 - Database Systems I</li>-->
+        <!--<li>CS 3516 - Computer Networks</li>-->
+        <!--<li>CS 3733 - Software Engineering</li>-->
+        <!--<li>CS 4401 - Software Security Engineering</li>-->
+        <!--<li>CS 453X - Machine Learning</li>-->
+    <!--</ul>-->
+
+    <div class="table-container">
+        <div class="table-header">
+            <table cellpadding="0" cellspacing="0" border="0">
+                <thead>
+                <tr>
+                    <th>COURSE</th>
+                    <th>TITLE</th>
+                </tr>
+                </thead>
+            </table>
+        </div>
+        <div class="table-content">
+            <table cellpadding="0" cellspacing="0" border="0">
+                <tbody>
+                <tr>
+                    <td>CS 1101</td>
+                    <td>Introduction to Program Design</td>
+                </tr>
+                <tr>
+                    <td>CS 2102</td>
+                    <td>Object-Oriented Design Concepts</td>
+                </tr>
+                <tr>
+                    <td>CS 2303</td>
+                    <td>Systems Programming Concepts</td>
+                </tr>
+                <tr>
+                    <td>CS 2011</td>
+                    <td>Introduction to Machine Organization and Assembly Language</td>
+                </tr>
+                <tr>
+                    <td>CS 2223</td>
+                    <td>Algorithms</td>
+                </tr>
+                <tr>
+                    <td>CS 3013</td>
+                    <td>Operating Systems</td>
+                </tr>
+                <tr>
+                    <td>CS 3133</td>
+                    <td>Foundations of Computer Science</td>
+                </tr>
+                <tr>
+                    <td>CS 3431</td>
+                    <td>Database Systems I</td>
+                </tr>
+                <tr>
+                    <td>CS 3516</td>
+                    <td>Computer Networks</td>
+                </tr>
+                <tr>
+                    <td>CS 3733</td>
+                    <td>Software Engineering</td>
+                </tr>
+                <tr>
+                    <td>CS 4401</td>
+                    <td>Software Security Engineering</td>
+                </tr>
+                <tr>
+                    <td>CS 453X</td>
+                    <td>Machine Learning</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
     <h2>Programming Experience</h2>
-    <!--<ul>-->
-        <!--<li>HTML - Some</li>-->
-        <!--<li>CSS - Some</li>-->
-        <!--<li>Java - A Lot</li>-->
-        <!--<li>JavaScript - Some</li>-->
-        <!--<li>Ruby - None</li>-->
-        <!--<li>Python - A Lot</li>-->
-        <!--<li>Unit Testing - Some</li>-->
-    <!--</ul>-->
 
     <!-- First Row -->
     <div class="container">
