editing opacity and some spelling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       div{
         width: 60%;
         background-color: white;
-        opacity: 0.7;
+        opacity: 0.8;
         margin-left: 15%;
         margin-right: 15%;
         padding-left: 5%;
@@ -33,42 +33,43 @@
     <h1>Information about Fareya</h1>
     <div>
          <p>
-        Hi! I am a 2nd Year CS student at WPI. I enjoy talking to just about everybody... you might say that's not really a skill but I can actually talk to anyone. 
-        On campus, I am a part of WICS, ACM.
-        In my free time I like eating, watching tv, hiking, biking, and laughing at everything.
-      </p>
+          Hi! I am a 2nd Year CS student at WPI. I enjoy talking to just about everybody... you might say that's not really a skill but I can actually talk to anyone. 
+          On campus, I am a part of WICS and ACM. I also enjoy checking out new books that come out in the libray. 
+          In my free time I like eating, watching tv, hiking, biking, and laughing at everything.
+        </p>
  
-      <p>
-        Major: CS </br>
-        Attempted Minors: DS and Writing
-      </p>
-      <p>
-        Activities: Hiking, Biking, Complaining, Writing
-      </p>
+        <p>
+          Major: CS </br>
+          Attempted Minors: DS and Writing
+        </p>
+        <p>
+        Activities: Hiking, Biking, Writing
+        </p>
 
-      <h2>Experience</h2>
-      <p>
-        Working experience
-      </p>
-      <ul>
-        <li>Liberty Mutunal Techstart Internship</li>           <li>WPI IT Helpdesk</li>
-        <li>Writing Center Tutor</li>
-      </ul>
-      <p>
-        Previous Classes:
-        <p>Systems Programming, Introduction to Machine   Language, Computer Networks, Algorithms, Operating Systems, Databases, Social Implications of Computing, Analysis of Algorithms</p>
-      </p>
+        <h2>Experience</h2>
+        <p>
+          Working experience
+        </p>
+        <ul>
+          <li>Liberty Mutual Techstart Internship</li>           
+          <li>WPI IT Helpdesk</li>
+          <li>Writing Center Tutor</li>
+        </ul>
+        <p>
+          Previous Classes:
+          <p>Systems Programming, Introduction to Machine   Language, Computer Networks, Algorithms, Operating Systems, Databases, Social Implications of Computing, Analysis of Algorithms</p>
+        </p>
  
-      <p>
-        Technologies
-      </p>
-      <ul>
-        <li>HTML and CSS: moderate </li>
-        <li>Java and Python: moderate to advanced</li>
-        <li>Ruby: None</li>
-        <li>Javascript: Basically No Experience </li>
-        <li>unit testing: ehhh</li>
-      </ul>
+        <p>
+          Technologies
+        </p>
+        <ul>
+          <li>HTML and CSS: moderate </li>
+          <li>Java and Python: moderate to advanced</li>
+          <li>Ruby: None</li>
+          <li>Javascript: Basically No Experience </li>
+          <li>unit testing: ehhh</li>
+        </ul>
     </div>
   </body>
 </html>
