Swapped LinkedIn link with image and added social media images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       Computer Science Major / Interactive Media and Game Development Minor
     </p>
     <p>
-      Connect with me on <a href="https://www.linkedin.com/in/trevor-weiler-92012214a/">LinkedIn</a>!
+      Connect with me on <a href="https://www.linkedin.com/in/trevor-weiler-92012214a/"><img src="linkedin.png" style="width:82px; height:86px" title="LinkedIn Page" alt="LinkedIn"</a>
     </p>
     <h2>Experience</h2>
     <p>
