added effect to cover

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         padding-right: 5%;
         padding-bottom: 2%;
       }
+      h3:hover{
+        text-shadow: 2px 2px red;
+      }
 
     </style>
   </head>
@@ -47,28 +50,28 @@
         </p>
 
         <h2>Experience</h2>
-        <p>
+        <h3>
           Working experience
-        </p>
+        </h3>
         <ul>
           <li>Liberty Mutual Techstart Internship</li>           
           <li>WPI IT Helpdesk</li>
           <li>Writing Center Tutor</li>
         </ul>
         <p>
-          Previous Classes:
+          <h3>Previous Classes:</h3>
           <p>Systems Programming, Introduction to Machine   Language, Computer Networks, Algorithms, Operating Systems, Databases, Social Implications of Computing, Analysis of Algorithms</p>
         </p>
  
-        <p>
+        <h3>
           Technologies
-        </p>
+        </h3>
         <ul>
           <li>HTML and CSS: moderate </li>
           <li>Java and Python: moderate to advanced</li>
           <li>Ruby: None</li>
           <li>Javascript: Basically No Experience </li>
-          <li>unit testing: ehhh</li>
+          <li>unit testing: basics</li>
         </ul>
     </div>
   </body>
