--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         padding-bottom: 2%;
       }
       h3:hover{
-        text-shadow: 2px 2px red;
+        text-shadow: 2px 2px gray;
       }
 
     </style>
