--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
       </ul>
     </p>
   </div>
+  <div id="line"></div>
   <div id="center">
-    <h1 style="margin-bottom:40px;">Information about Yufei Gao</h1>
+    <h1 style="margin-top:5px; margin-bottom:40px;color: #28404C;">Information about Yufei Gao</h1>
     <p>
-      WPI class of 2020  <u style = "color:grey;">(plan to graduate in 2019)</u><br>
+      WPI class of 2020  <u style = "color:#8CACBC;">(plan to graduate in 2019)</u><br>
       Major: Computer Science<br>
       Minor: Data Science<br>
     </p>
@@ -45,6 +46,7 @@
       <img src = "https://pics.me.me/my-code-doesnvt-work-have-no-idea-why-my-code-14032928.png" width="220px" height="350px" style="margin-top:1em;">
     </p>
   </div>
+  <div id="line"></div>
   <div id="right">
     <p>
       My experience with the following technologies and methods (none, some, a lot):<br>
