--- a/index.html
+++ b/index.html
@@ -4,24 +4,41 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Alex Osler</h1>
     <p>
-      [Self introduction]
+      My name is Alex Osler, and I'm graduating with the class of 2020
     </p>
+    <p>I'm a 3rd year CS major. I've taken the CS classes,</p>
+    <ul>
+      <li>1102: Accelerated Introduction to Program Design</li>
+      <li>2102: Object-Oriented Design Concepts</li>
+      <li>2303: Systems Programming Concepts</li>
+      <li>2022: Discrete Mathematics</li>
+      <li>2011: Introduction to Machine Organization and Assembly Language</li>
+      <li>3516: Computer Networks</li>
+      <li>2223: Algorithms</li>
+      <li>3013: Operating Systems</li>
+    </ul>
     <p>
-      [Major and other information]
+      My experience with the various technology's varies, so I'll list them below,
     </p>
-    <p>
-      [Other things]
-    </p>
+    <ul>
+      <li>HTML: a lot</li>
+      <li>CSS: some</li>
+      <li>Java: a lot</li>
+      <li>Javascript: a lot</li>
+      <li>Ruby: none</li>
+      <li>Python: none</li>
+      <li>unit testing: some</li>
+    </ul>
 
     <h2>Experience</h2>
     <p>
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>General Office Work in a small office</li>
+      <li>Development Internship at Mathworks</li>
     </ul>
   </body>
 </html>
