Added the other social media images with their links and played around with some fonts.  It should be noted that the images were found on Google Images via a search for noncommerical reuse images.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <title>CS4241 Assignment 1</title>
     <style>
     body {background-color: powderblue;}
-    h1   {color: blue;}
+    h1   {
+          color: steelblue;
+          font-family: verdana;
+          font-size: 300%;
+         }
     p    {color: red;}
 </style>
     <meta charset="utf-8">
@@ -15,9 +19,6 @@
     </p>
     <p>
       Computer Science Major / Interactive Media and Game Development Minor
-    </p>
-    <p>
-      Connect with me on <a href="https://www.linkedin.com/in/trevor-weiler-92012214a/"><img src="linkedin.png" style="width:82px; height:86px" title="LinkedIn Page" alt="LinkedIn"</a>
     </p>
     <h2>Experience</h2>
     <p>
@@ -46,5 +47,10 @@
       <li>Python - <i>some</i></li>
       <li>unit testing - <i>some</i></li>
     </ul>
+    <p>
+      <a href="https://www.linkedin.com/in/trevor-weiler-92012214a/"><img src="linkedin.png" style="width:82px; height:86px" title="LinkedIn Page" alt="LinkedIn"></a>
+      <a href="https://www.facebook.com/trevor.weiler.7"><img src="facebook.png" style="width:82px; height:86px" title="Facebook Page" alt="Facebook"></a>
+      <a href="https://www.instagram.com/trevor_weiler/"><img src="instagram.png" style="width:82px; height:86px" title="Instagram Page" alt="Instagram"></a>
+    </p>
   </body>
 </html>
