--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li>Ruby: None</li>
           <li>Javascript: Basically No Experience </li>
           <li>unit testing: basics</li>
-          <li>Click <a href="https://github.com/fareya"> here</a> check out my github</li>>s
+          <li>Click <a href="https://github.com/fareya"> here</a> check out my github</li>
         </ul>
     </div>
   </body>
