--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	
 	<h2>Introduction</h2>
 	<p>
-      [Self introduction]
+      My name is Nate Carter and I am an IMGD major at WPI. I have very limited experience with web development so I am excited to see where this class takes me.
     </p>
 
     <h2>Languages</h2>
