created css file plus added moar info

--- a/index.html
+++ b/index.html
@@ -4,21 +4,27 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about Grace Pelella</h1>
+    <h1 id="headerMain" class="header">
+      Information about Grace Pelella - class of 2020
+    </h1>
     <p>
-      Class of 2020
-    </p>
-    <p>
-      CS major
-    </p>
-    <p>
-      From California, the land of fire
-    </p>
-    <p>
-      CS 1101, CS 2102, CS 2011, CS 2223, CS 2303, CS 3041, CS 3043
+      I am a junior going for a CS major. I am from California, commonly refered to as
+      the land of Chaos; earthquakes and fire edition. In B term, I will be going to
+      Washington DC for my IQP to work with the Coast Guard.
     </p>
 
-    <h2>Experience</h2>
+    <h2 class="header">
+      CS courses taken
+    </h2>
+
+    <p>
+      1101, 2102, 2011, 2202, 2223, 2303, 3041, 3043
+    </p>
+
+    <h2 class="header">
+      Language Experience
+    </h2>
+
     <p>
       HTML - a moderate amount </br>
       CSS - I've dabbled </br>
@@ -26,11 +32,17 @@
       JavaScript - some </br>
       Ruby - none </br>
       Python - some </br>
-      unit testing - none (i think) 
+      unit testing - none (i think)
     </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
+
+    <h2 class="header">
+      Work Experience
+    </h2>
+
+    <p>
+      A couple summers ago, I taught and worked with middle schoolers basic HTML and CSS
+      with JavaScript sprinkled in too. I encouraged them to be creative and helped support
+      and excite them about STEM opportunities.
+    </p>
   </body>
 </html>
