--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </p>
     <ul>
       <li>HTML: a lot</li>
-      <li>CSS: a lot</li>
+      <li>CSS: some</li>
       <li>Java: a lot</li>
       <li>JavaScript: some</li>
       <li>Ruby: a lot</li>
