updates and extreme colors to make sure it works

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <p>
       HTML - a moderate amount </br>
       CSS - I've dabbled </br>
-      Java - a lot, but it's been a while so some </br>
+      Java - a lot, but it's been a while so.. some </br>
       JavaScript - some </br>
       Ruby - none </br>
       Python - some </br>
-      unit testing - none (i think)
+      unit testing - none
     </p>
 
     <h2 class="header">
