--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
           color: steelblue;
           font-family: verdana;
           font-size: 300%;
+          text-align: center;
          }
     p    {color: red;}
-</style>
+    .center {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 50%;
+         }
+    </style>
     <meta charset="utf-8">
   </head>
   <body>
     <h1>Information about Trevor Weiler</h1>
+    <p>
+    <img src="profilepic.jpg" style="width:500px" alt="Profile Picture" class="center">
+    </p>
     <p>
       I am a member of the Class of 2020 at WPI
     </p>
