added info to index, renamed style.css

--- a/index.html
+++ b/index.html
@@ -7,22 +7,53 @@
   <body>
     <h1>Information about Madeline Burke</h1>
     <p>
-      [Self introduction]
+      Hi, my name is Madeline Burke and I am a Senior at Worcester Polytechnic Institute (WPI).
     </p>
     <p>
-      [Major and other information]
+      I am majoring in Computer Science and minoring in Data Science and Business.
     </p>
     <p>
-      [Other things]
+      Classes that I have taken at WPI include:
+      <ul>
+        <li>CS1101: Intro to Program Design</li>
+        <li>CS2022: Descrete Mathematics</li>
+        <li>CS2102: Object-Oriented Design</li>
+        <li>CS2223: Algorithms</li>
+        <li>CS2303: Systems Programming</li>
+        <li>CS2011: Machine Organization &amp; Assembly</li>
+        <li>CS3041: Human-Computer Interaction</li>
+        <li>CS3043: Social Implications of Information Processing</li>
+        <li>CS3133: Foundations of Computer Science</li>
+        <li>CS3733: Software Engineering</li>
+        <li>CS3013: Operating Systems</li>
+        <li>CS3516: Computer Networks</li>
+        <li>CS4120: Analysis of Algorithms</li>
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
-    </p>
+      <b>Working experience</b>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Dun &amp; Bradstreet</li>
+      <li>Liberty Mutual Insurance</li>
     </ul>
+    </p>
+    <p>
+      <b>Technology and Method Experience</b>
+      <ul>
+        <li>A lot:
+          <li>Java</li>
+          <li>Python</li>
+          <li>HTML</li>
+          <li>CSS</li>
+        </li>
+        <li>Some:
+          <li>JavaScript</li>
+          <li>unit testing</li>
+        </li>
+        <li>None:
+          <li>Ruby</li>
+        </li>
+
   </body>
 </html>
